# bloggen

./: .gitignore  README.md  build.sh  compose.yaml  idea-doc.md  run.sh
bloggen-frontend/: Dockerfile  README.md  frontend.yaml  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
bloggen-frontend/app/: globals.css  layout.tsx  page.js  page.tsx
bloggen-frontend/app/[postname]/: page.js
bloggen-frontend/app/assets/[slug]/: route.ts
bloggen-frontend/app/components/: Footer.js  MetaHolder.js
bloggen-frontend/app/posts/: page.js
bloggen-frontend/app/posts/[postname]/: page.js
bloggen-frontend/app/static/: README.md
bloggen-frontend/app/static/hello-world/: hello-world.html
bloggen-frontend/public/assets/: README.md
cli/: README.md  go.mod  go.sum  main.go
cli/cmd/: conv.go  init.go  list.go  post.go  root.go  test.go  types.go  upload.go  util.go
cli/test/: meta.json  test.html  test.md
cli/util/: parsing.go  server.go  types.go  util.go
frontend/: .gitignore  Cargo.toml  README.md  index.html
frontend/src/: content.rs  main.rs
frontend/src/components/: mod.rs  pagination.rs  post_card.rs
frontend/src/pages/: home.rs  mod.rs  post.rs  post_list.rs
initial-posts/Post 3: Return of the King/: Post 3: Return of the King.html  Post 3: Return of the King.md
initial-posts/hello-world/: hello-world.md  meta.json
initial-posts/second-post/: second-post.md
nginx/: Dockerfile  README.md  server.conf
server/: Cargo.toml  Dockerfile  README.md  docker.json  server.yaml  test.json
server/src/: config.rs  main.rs
(+4 files in other folders)
