[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.83"
async-trait = "0.1.80"
log = "0.4.21"
once_cell = "1.19.0"
russh = {version="0.44.1", features=["openssl"]}
russh-keys = "0.44.0"
russh-sftp = "2.0.0"
serde = "1.0.202"
serde_json = "1.0.117"
simplelog = "0.12.2"
tokio = "1.37.0"
